# sysprog_3

./: Makefile  Makefile.am  Makefile.in  README.md  company.c  company.h  company_file.c  company_file.h  company_struct.h  config.status  configure  configure.ac  configure~  main  main.c  runtests  test
.deps/: company.Po  company_file.Po  main.Po
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
tests/: test_company.c
tests/.deps/: test_company.Po
